<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#221B1B"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/loginicon"
        android:layout_width="135dp"
        android:layout_height="89dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/splashContentDescription"
        app:layout_constraintBottom_toTopOf="@+id/loginTextView"
        app:layout_constraintEnd_toStartOf="@+id/headerName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splashicon" />

    <TextView
        android:id="@+id/headerName"
        android:layout_width="0dp"
        android:layout_height="89dp"
        android:layout_marginEnd="55dp"
        android:fontFamily="@font/acme"
        android:gravity="center_vertical"
        android:text="@string/loginHeader"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/loginicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginicon"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="136dp"
        android:layout_height="77dp"
        android:layout_marginStart="28dp"
        android:fontFamily="@font/andada"
        android:gravity="center"
        android:text="@string/loginTextview"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/signinMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginicon" />

    <TextView
        android:id="@+id/signinMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="40dp"
        android:text="@string/signInMessage"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/emailTextLInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextLInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="37dp"
        app:layout_constraintBottom_toTopOf="@+id/passTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/loginErrorMsg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/loginErrorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="23dp"
        android:gravity="center"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="127dp"
        android:onClick="onClickLoginBtn"
        android:text="LOGIN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passTextInputLayout" />

    <ImageButton
        android:id="@+id/signinWithGooglebtn"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="118dp"
        android:adjustViewBounds="true"
        android:background="#FFFFFF"
        android:scaleType="fitCenter"
        android:onClick="onClickLoginWithGoogleBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:srcCompat="@drawable/signgooglebtn" />

    <TextView
        android:id="@+id/goToSignup"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="59dp"
        android:gravity="center"
        android:text="@string/no_account"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signinWithGooglebtn" />

    <ProgressBar
        android:id="@+id/loginProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <com.google.android.gms.common.SignInButton-->
    <!--        android:id="@+id/sign_in_button"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content" />-->

</androidx.constraintlayout.widget.ConstraintLayout>