<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#221B1B"
    tools:context=".MainActivity">

    <!--Main Text greeting the user-->
    <TextView
        android:id="@+id/welcomeUserTV"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="29dp"
        android:fontFamily="@font/andada"
        android:gravity="center_vertical"
        android:text="@string/welcome_user"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/totalAmountTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Dropdown to select months-->

    <!--Calculated Monthly expense statement-->
    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="27dp"
        android:background="@drawable/border_rounder_with_color_black"
        android:text="@string/logout"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="102dp"
        android:layout_height="50dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="24dp"
        android:background="#886565"
        android:contentDescription="@string/dropdown_contentDesc"
        android:spinnerMode="dropdown"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalAmountTV"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="243dp"
        android:fontFamily="@font/andada"
        android:text="@string/totalAmount"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeUserTV" />

    <!--Linear Layout for our Two income & expense card view-->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="106dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="59dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalAmountTV">

        <androidx.cardview.widget.CardView
            android:id="@+id/incomeCardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="5"
            app:cardBackgroundColor="#E223A629"
            app:cardCornerRadius="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <ImageView
                    android:id="@+id/upIcon"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toStartOf="@+id/incomeTV"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/ic_menu_upload" />

                <TextView
                    android:id="@+id/incomeTV"
                    android:layout_width="58dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="50dp"
                    android:fontFamily="@font/andada"
                    android:gravity="center_vertical"
                    android:text="@string/incomeTV"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/upIcon"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/incomeAmountTV"
                    android:layout_width="126dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="26dp"
                    android:layout_marginBottom="1dp"
                    android:fontFamily="@font/andada"
                    android:gravity="center_vertical"
                    android:text="@string/incomeAmt"
                    android:textColor="@color/white"
                    android:textSize="27dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.153"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <androidx.cardview.widget.CardView
            android:id="@+id/expenseCardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="5"
            app:cardBackgroundColor="#D63535"
            app:cardCornerRadius="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <ImageView
                    android:id="@+id/downIcon"
                    android:layout_width="27dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/stat_sys_download_done" />

                <TextView
                    android:id="@+id/expenseTV"
                    android:layout_width="58dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="40dp"
                    android:fontFamily="@font/andada"
                    android:gravity="center_vertical"
                    android:text="Expense"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/expenseAmountTV"
                    android:layout_width="126dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="26dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/andada"
                    android:gravity="center_vertical"
                    android:text="$0"
                    android:textColor="@color/white"
                    android:textSize="27dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <!--a line for dividing the screen-->
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="#c0c0c0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <!--Income & Expense listview-->
    <ListView
        android:id="@+id/expenseListview"
        android:layout_width="408dp"
        android:layout_height="399dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>